get saved users and preview users in recyclerview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="save">Save</string>
+    <string name="users">Users</string>
+    <string name="years_old">Years Old</string>
+    <string name="somethingWentWrong">Something went wrong.</string>
 </resources>
